# RUST-LEARN-COURSE

./: .gitignore  CURRICULUM.txt  README.md  README[Hindi].md  README[Spanish].md
a_00_create_project_CARGO/: Cargo.toml  README.md
a_00_create_project_CARGO/src/: main.rs
a_00_create_project_RUSTC/: NameFile.rs  README.md
a_01_hello_world/: Cargo.toml  README[Chinese].md  README[Hindi].md
a_01_hello_world_b/: 01_hola_mundo.rs  README.md
a_02_data_types/: Cargo.toml  README.md
a_02_data_types/docs/: README[German].md  README[Hindi].md  README[Portuguese].md
a_02_hello_world_b/: 01_hola_mundo.rs  README.md
b_01_data_types/: Cargo.toml
b_01_data_types/docs/: README[Chinese].md  README[French].md  README[Russian].md  README[Spanish].md
b_01_data_types/src/: main.rs
b_02_type_of_numbers/: 02_type_of_numbers.rs  README.md  use.txt
b_02_type_of_numbers/docs/: README[Chinese].md  README[French].md  README[German].md  README[Hindi].md  README[Portuguese].md  README[Russian].md  README[Spanish].md
xyz_Example/: 01_cifrate.rs
xyz_Example2/: Cargo.toml  README.md  SUMMARY.md
xyz_Example2/src/: advanced.rs  main.rs
